--- a/style/style.css
+++ b/style/style.css
@@ -1,11 +1,11 @@
-@import url("style/header.css");
+@import url("./style/header.css");
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-@import url("style/banner.css");
+@import url("./style/banner.css");
 @import url("./style/carousel.css");
 @import url("./style/topics.css");
 @import url("./style/contacts.css");
-@import url("/style/footer.css");
+@import url("./style/footer.css");
 
 :root{
     --color-background: #EBECEE;
