--- a/style/style.css
+++ b/style/style.css
@@ -6,6 +6,7 @@
 @import url("./topics.css");
 @import url("./contacts.css");
 @import url("./footer.css");
+@import url("assets")
 
 :root{
     --color-background: #EBECEE;
