--- a/style/header.css
+++ b/style/header.css
@@ -12,7 +12,7 @@
 }
 
 .header__menu-wrapper {
-    background-image: url(./asset/Menu.svg);
+    background-image: url(../asset/Menu.svg);
     width: 4.5rem;
     height: 4rem;
     display: inline-block;
@@ -22,7 +22,7 @@
 }
 
 .wrapper__button:checked ~ .wrapper__label > .header__menu-wrapper { 
-    background-image: url(./assets/Menu\ Aberto.svg);
+    background-image: url(../assets/Menu\ Aberto.svg);
 }
 
 .wrapper__button:checked ~ .wrapper__label {
