--- a/style/header.css
+++ b/style/header.css
@@ -22,7 +22,7 @@
 }
 
 .wrapper__button:checked ~ .wrapper__label > .header__menu-wrapper { 
-    background-image: url(../assets/Menu\ Aberto.svg);
+    background-image: url("../assets/Menu\ Aberto.svg");
 }
 
 .wrapper__button:checked ~ .wrapper__label {
