--- a/style/header.css
+++ b/style/header.css
@@ -12,7 +12,7 @@
 }
 
 .header__menu-wrapper {
-    background-image: url("../asset/Menu.svg");
+    background-image: url("../assets/Menu.svg");
     width: 4.5rem;
     height: 4rem;
     display: inline-block;
