--- a/style/contacts.css
+++ b/style/contacts.css
@@ -24,7 +24,7 @@
 .contacts__email::placeholder {
     font-family: var(--font-project);
     color: var(--color-second);
-    background: url(/assets/Email.svg) no-repeat;
+    background: url(../assets/Email.svg) no-repeat;
     padding-left: 2rem;
     text-align: center;
 }
